fix: hide horizontal overflow

--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -3,6 +3,7 @@
 	left: 0;
 	width: 616px;
 	height: 100%;
+	overflow-x: hidden;
 	transform: translate(-616px);
 	transition: transform 0.5s ease;
 }
